<resources>
    <string name="app_name">iFemini</string>
    <string name="overview">Overview</string>
    <string name="calendar">Calendar</string>
    <string name="history">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_your_date">Select your date:</string>
    <string name="mark_as_a_peroid">Mark as a Period?</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="log_out">Log Out</string>
    <string name="profile">Profile</string>
    <string name="exit">Exit</string>
    <string name="avg_cycle_length"> Period Cycle </string>
    <string name="avg_period_length"> Period Length</string>
    <string name="cycle_details">Cycle Details</string>
    <string name="the_length_of_your_peroid_cycle">Click here To change Period cycle</string>
    <string name="the_length_of_your_peroid">Click here To change Period Length</string>
    <string name="peroid_length">Period Length</string>
    <string name="peroid_cycle">Period cycle</string>
    <string name="title">title</string>
    <string name="accept_terms_and_condition">Accept terms and condition</string>
    <string name="select_date">Select Date</string>
    <string name="select_last_peroid_date">Select Last Period Date</string>
    <string name="period_length">Period length     default 4</string>
    <string name="period_cycle">Period Cycle default 28 </string>
    <string name="user_name">User Name</string>
    <string name="_4">4</string>
    <string name="_28">28</string>
    <string name="remaining">Remaining</string>
    <string name="your_last_period_date">Your last period date</string>
    <string name="your_history">Your History</string>
    <string name="change_email_address">Change Email Address</string>


    <string name="txt_view_lat">Latitude:</string>
    <string name="txt_view_lon">Longitude:</string>
    <string name="txt_view_alt">Altitude:</string>

    <string name="GPS_permissions">You must accept the permissions to use the application</string>
    <string name="btn_watch_permissions">Watch Permissions</string>
    <string name="btn_close">Close</string>

    <string name="GPS_disabled">It seems that your GPS is disabled, do you want to activate it?</string>
    <string name="Network_disabled">It seems that your connection is disabled, do you want to activate it?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_loc_gps">Get GPS Location</string>
    <string name="btn_loc_net">Get Location by Network</string>
    <string name="permission_required_toast">Permission Required Toast</string>
    <string name="permission_rationale_location">permission rationale_ ocation</string>
    <string name="location_permission_denied">location permission denied</string>

</resources>