<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignupActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/toolbar"
        android:text="@string/register"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorPrimary"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/title">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:elevation="10dp"
            android:outlineAmbientShadowColor="@android:color/darker_gray"
            android:background="@drawable/white_border"
            tools:targetApi="p">
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                app:met_floatingLabel="normal"
                android:hint="@string/user_name"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/black"
                app:met_baseColor="@color/black"
                android:backgroundTint="@color/black"
                android:textColorHint="@color/black"
                android:textStyle="bold"
                android:inputType="textPersonName"
                app:met_textColor="@color/black"/>

        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:elevation="10dp"
            android:outlineAmbientShadowColor="@android:color/darker_gray"
            android:background="@drawable/white_border"
            tools:targetApi="p">
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                app:met_floatingLabel="normal"
                android:hint="Email Address"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/black"
                app:met_baseColor="@color/black"
                android:backgroundTint="@color/black"
                android:textColorHint="@color/black"
                android:textStyle="bold"
                android:inputType="textEmailAddress"
                app:met_textColor="@color/black"/>

        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:elevation="10dp"
            android:outlineAmbientShadowColor="@android:color/darker_gray"
            android:background="@drawable/white_border"
            tools:targetApi="p">
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                app:met_floatingLabel="normal"
                android:hint="Password"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/black"
                app:met_baseColor="@color/black"
                android:backgroundTint="@color/black"
                android:textColorHint="@color/black"
                android:textStyle="bold"
                android:inputType="textPassword"
                app:met_textColor="@color/black"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:elevation="10dp"
            android:outlineAmbientShadowColor="@android:color/darker_gray"
            android:background="@drawable/white_border"
            tools:targetApi="p">
            <TextView
                android:id="@+id/last_period_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:hint="@string/select_last_peroid_date"
                android:textSize="16sp"
                android:gravity="center"
              />
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:elevation="10dp"
            android:outlineAmbientShadowColor="@android:color/darker_gray"
            android:background="@drawable/white_border"
            tools:targetApi="p">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"

                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"
                    android:text="@string/period_cycle"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:text="@string/period_length"
                    android:gravity="center"
                    />
            </LinearLayout>

        </FrameLayout>
        <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:elevation="10dp"
        android:outlineAmbientShadowColor="@android:color/darker_gray"
        android:background="@drawable/white_border"
        tools:targetApi="p">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"

            >
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/period_cycle"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:hint="@string/_28"
                android:gravity="center"
                />
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/period_length"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:hint="@string/_4"
                android:gravity="center"
                />
        </LinearLayout>

    </FrameLayout>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:id="@+id/radioButton">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/accept_terms_and_condition"
                android:buttonTint="@color/colorPrimary"
                android:textSize="14sp"
                android:id="@+id/male"
                tools:targetApi="LOLLIPOP"/>

        </RadioGroup>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:elevation="10dp"
            android:outlineAmbientShadowColor="@android:color/darker_gray"
            android:background="@drawable/white_border"
            tools:targetApi="p">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/register"
                android:textAllCaps="true"
                android:id="@+id/register"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:background="?attr/selectableItemBackground"/>


        </FrameLayout>


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:outlineSpotShadowColor="@color/pink"
            android:layout_gravity="center"
            android:indeterminateTint="@color/colorPrimary"
            tools:targetApi="LOLLIPOP"
            android:visibility="gone"

            />

    </LinearLayout>

</RelativeLayout>